[metadata]
name = kwargs-only
version = 1.0.2
description = A decorator to make a function accept keyword arguments only, on both Python 2 and 3.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/kwargs-only
project_urls =
    Changelog = https://github.com/adamchainz/kwargs-only/blob/master/HISTORY.rst
license = ISC License
keywords = kwargs
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license_file = LICENSE

[options]
py_modules = kwargs_only
include_package_data = True
install_requires =

python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503

[isort]
add_imports =
    from __future__ import absolute_import
    from __future__ import division
    from __future__ import print_function
    from __future__ import unicode_literals
include_trailing_comma = True
known_first_party = kwargs_only
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    src
    tests
